--- a/2023/RA/cw2/coursework.tex
+++ b/2023/RA/cw2/coursework.tex
@@ -11,15 +11,27 @@ be the set of independent sets on $G$, and let $\e:\P\rr{V}\to \cc{0,1}^V$ be th
 between subsets of $V$ and corresponding binary encodings, i.e. $\e\rr{x}\rr{v}=1$ iff $v\in x$.
 We abuse notation and write $x\rr{v}=\e\rr{x}\rr{v}$.
 
+Now fix $\lambda\in\rr{0,\infty}$ and let $\pi:\mathcal P\rr{V}\to\bb{0,1}$ be the probability distribution defined by
+\begin{align*}
+  \pi\cc{x}=
+  \begin{cases}
+    \frac{\lambda^{\abs{x}}}{Z\rr{\lambda}} &\text{if }\forall \cc{v,w}\in E.\:x\rr{v}x\rr{w}=0 \\
+    0 &\text{otherwise}
+  \end{cases}
+\end{align*}
+where $Z\rr{\lambda}=\sum_{x\in\cc{0,1}^V} \lambda^{\abs{x}}$.
 
 Let $\rr{X_t}_{t\geq 0}$ be the discrete time stochastic process associated with the Glauber dynamics
-update. That is, for all $t\geq 0$, $X_t$ takes values in $\Omega$ and an update is
-performed in two steps from a state $X_t=x$:
-\begin{enumerate}
-  \item An element $v\in V$ is chosen uniformly at random.
-  \item A new state $y\in\Omega\rr{x,v}$ is chosen uniformly at random.
-\end{enumerate}
-Here $\Omega\rr{x,v}=\cc{y\in\Omega : \forall w\neq v.\: x\rr{w}=y\rr{w}}$.
+for $\pi$ and, for each $t\in T$, let $V_t$ be the random variable denoting the choice of
+vertex $v\in V$ in the transition from $X_t$ to $X_{t+1}$. That is, for all $t\geq 0$, all $x,y\in\Omega$,
+and each choice $v\in V$, we have the transition probability
+\begin{align*}
+  \prc{X_{t+1}=y}{X_t=x, V_t=v} =
+  \begin{cases}
+    \frac{\pi\cc{y}}{\pi\rr{\Omega\rr{x,v}}} &\text{if }y\in\Omega\rr{x,v} \\
+    0 &\text{otherwise}
+  \end{cases}
+\end{align*}
 
 \begin{claim*}[1]
   Let $\rr{Y_t}_{t\geq 0}$ be a discrete time stochastic process over $\Omega$ with the
@@ -34,49 +46,38 @@ Here $\Omega\rr{x,v}=\cc{y\in\Omega : \forall w\neq v.\: x\rr{w}=y\rr{w}}$.
   There exists a $\lambda>0$ such that
   the processes $\rr{X_t}_{t\geq 0}$ and $\rr{Y_t}_{t\geq 0}$ are equivalent.
   \begin{proof}
-    Let $x,y\in\Omega$ and $t\geq 0$. Let $x\ominus y= \rr{x\setminus y}\cup \rr{y\setminus x}$.
-    Thus we calculate
-    \begin{align*}
-      \prc{X_{t+1}=y}{X_{t}=x} =
-      \begin{cases}
-        \sum_{v\in V} \frac{1}{\abs{V}\abs{\Omega\rr{x,v}}} &\text{if }\abs{x\ominus y}=0 \\
-        \frac{1}{2\abs{V}} &\text{if } \abs{x\ominus y}=1 \\
-        0 &\text{if } \abs{x\ominus y} > 1 \\
-      \end{cases}
-    \end{align*}
-    The $\abs{x\ominus y}=0$ case follows as, for each $v\in V$, there are $\abs{\Omega\rr{x,v}}$
-    possible states to transition to but only one of them leads to the desired case.
-    In the $\abs{x\ominus y}=1$ the transition requires precisely one vertex $v\in V$ to be selected,
-    such that $y\in\Omega\rr{x,v}$. After this has occurred, we note that there are
-    $\abs{\Omega\rr{x,v}}=2$ further choices of which precisely one leads to success.
-    Finally, if $\abs{x\ominus y} > 1$ then $y\not\in\Omega\rr{x,v}$ for any $v\in V$
-    so the transition is impossible.
+    For all $t$, let $V'_t$ be the random variable denoting the choice of vertex $v\in V$ in the
+    transition from $Y_t$ to $Y_{t+1}$.
+    Let $t\in T$, $x,y\in\Omega$ and $x\ominus y=\rr{x\setminus y}\cup\rr{y\setminus x}$
+    denote the symmetric difference.
 
-    We clearly have
+    Consider the case $\abs{x\ominus y}>1$. We clearly have
     \begin{align*}
       \prc{Y_{t+1}=y}{Y_t=x, \abs{x\ominus y}>1} = \prc{X_{t+1}=y}{X_t=x, \abs{x\ominus y}>1} = 0
     \end{align*}
-    as each update only affects at most one vertex. This is independent of the choice of $\lambda$.
+    as each update only affects at most one vertex.
 
-    Further, we break the case $\abs{x\ominus y}=1$
-    into $x\subset y$ and $x\supset y$. We then find
+    Consider the case $\vv{x\ominus y}=1$. We have to differentiate between the cases
+    $x\subset y$ and $x\supset y$. Let $v\in V$ and assume $x\cup\cc{v}=y$. We find the probabilities
     \begin{align*}
-      \prc{Y_{t+1}=y}{Y_t=x, x\subset y} = \frac{1}{\abs{V}} \frac{\lambda}{1+\lambda}
+      \prc{Y_{t+1}=y}{Y_t=x, V_t=v} = \frac{\lambda}{1+\lambda}.
+    \end{align*}
+    Moreover,
+    \begin{align*}
+      \prc{X_{t+1}=y}{X_t=x, V_t=v}
+      = \frac{\pi\cc{y}}{\pi\rr{\Omega\rr{x,v}}}
+      = \frac{\lambda^{\vv{y}}}{\lambda^{\vv{x}}+\lambda^{\vv{y}}}
+      = \frac{\lambda\lambda^{\vv{x}}}{\lambda^{\vv{x}}\rr{1+\lambda}}
+      = \frac{\lambda}{1+\lambda}
     \end{align*}
     and
     \begin{align*}
-      \prc{Y_{t+1}=y}{Y_t=x, x\supset y} = \frac{1}{\abs{V}} \frac{1}{1+\lambda}.
+      \prc{X_{t+1}=y}{X_t=x, V_t\neq v} = 0
     \end{align*}
-    For equivalence of $\rr{X_t}_{t\geq 0}$ and $\rr{Y_t}_{t\geq 0}$ we now require
+    Thus
     \begin{align*}
-      \prc{Y_{t+1}=y}{Y_t=x, x\subset y} = \prc{Y_{t+1}=y}{Y_t=x, x\supset y},
-    \end{align*}
-    i.e.
-    \begin{align*}
-      \frac{1}{\abs{V}} \frac{\lambda}{1+\lambda} = \frac{1}{\abs{V}} \frac{1}{1+\lambda}.
-    \end{align*}
-    Thus we choose $\lambda = 1$. Note that this leads to
-    \begin{align*}
+      \prc{X_{t+1}=y}{X_t=x} &= \sum_{v\in V} \pr{V_t=v}\prc{X_{t+1}=y}{X_t=x, V_t= v} \\
+                             &= \frac{1}{\vv{V}} \frac{\lambda}{1+\lambda} \\
                              &= \sum_{v\in V} \pr{V'_t=v}\prc{Y_{t+1}=y}{Y_t=x, V'_t= v} \\
                              &=\prc{Y_{t+1}=y}{Y_t=x}
     \end{align*}
@@ -305,6 +306,67 @@ We immediately note $\rho\rr{x,y}=\abs{x\ominus y}$.
       \exc{\rho\rr{X_{t+1},Y_{t+1}}}{\rho\rr{X_t,Y_t}=1} < 1 - \frac{1-r}{\vv{V}},
     \end{align*}
     as required.
+  \end{proof}
+\end{claim*}
+
+\begin{claim*}[5]
+  Let $0<r<1$ and assume $\Delta\leq r\rr{1+\lambda}/\lambda$. Then, for all $\e>0$,
+  \begin{align*}
+    \tau\rr{\e}\leq \frac{\vv{V}}{1-r}{\log\frac{\vv{V}}{\e}}.
+  \end{align*}
+  \begin{proof}
+    We argue that, for all $d\leq\vv{V}$,
+    \begin{align*}
+      \exc{\rho\rr{X_{t+1},Y_{t+1}}}{\rho\rr{X_t,Y_t}=d}\leq \beta d.
+    \end{align*}
+    By previous considerations, this holds in the cases $d=0$ and $d=1$.
+
+    Let $x,y\in\Omega$ such that $d=\rho\rr{x,y}>1$. Create a sequence of states
+    $x=z^0,\ldots,z^d=y\in\Omega$ such that, for all $0\leq i<d$, $\rho\rr{z^i,z^{i+1}}=1$.
+    Such a sequence may be constructed by adding or removing vertices from $x\ominus y$ to
+    either $x$ or $y$. Now, for each $t\geq 0$, let $X_t=Z_t^0,\ldots,Z_t^d=Y_t$ be random
+    variables. Such that, for all $0\leq i\leq d$, $Z_0^i=z^i$. Then couple the path
+    with the following update rule from $\rr{Z_t^0,\ldots,Z_t^d}=\rr{u_0,\ldots,u_d}$
+    to $\rr{Z_{t+1}^0,\ldots,Z_{t+1}^d}=\rr{u'_0,\ldots,u'_d}$:
+    \begin{enumerate}
+      \item An element $v\in V$ is chosen uniformly at random.
+      \item Let $c=1$ with probability $\lambda/\rr{1+\lambda}$ and $c=0$ otherwise.
+      \item For $0\leq i\leq d$:
+        \begin{enumerate}
+          \item For all $w\neq v$, let $u'_i\rr{w}=u_i\rr{v}$.
+          \item If there is a $w\in N\rr{v}$ such that $u_i\rr{w}=1$ then $u'_i\rr{v}=0$.
+          \item Else, assign $u'_i\rr{v}=c$.
+        \end{enumerate}
+    \end{enumerate}
+    We observe that, for each $0\leq i<j\leq d$, $\rr{Z_i,Z_j}$ locally behaves like the coupling we studied
+    previously. Thus, in particular, for all $0\leq i<d$,
+    \begin{align*}
+      \exc{\rho\rr{Z_{t+1}^i,Z_{t+1}^{i+1}}}{\rho\rr{Z_t^i,Z_t^{i+1}}=1}<\exp\rr{\rr{r-1}\vv{V}}.
+    \end{align*}
+    By the triangle inequality we then obtain
+    \begin{align*}
+      \exc{\rho\rr{X_{t+1},Y_{t+1}}}{\rho\rr{X_t,Y_t}=d} \leq \sum_{i=0}^{d-1}\exc{\rho\rr{Z_{t+1}^i,Z_{t+1}^{i+1}}}{\rho\rr{Z_t^i,Z_t^{i+1}}=1} < d\exp\rr{\rr{r-1}\vv{V}}
+    \end{align*}
+    Thus, after $T\geq 0$ steps, we have
+    \begin{align*}
+      \exc{\rho\rr{X_T,Y_T}}{\rho\rr{X_0,Y_0}=d} < d\rr{1-\frac{1-r}{\vv{V}}}^T \leq \vv{V}\exp\rr{\rr{r-1}\vv{V}T}.
+    \end{align*}
+    Let $\e>0$ and assume
+    \begin{align*}
+      T \geq \frac{\vv{V}}{1-r}\rr{\log\rr{V}-\log\rr{\e}}.
+    \end{align*}
+    Equivalently,
+    \begin{align*}
+      \vv{V}\exp\rr{\rr{r-1}\vv{V}T} \leq \e
+    \end{align*}
+    so
+    \begin{align*}
+      \exc{\rho\rr{X_T,Y_T}}{\rho\rr{X_0,Y_0}=d} \leq \e.
+    \end{align*}
+    By the coupling lemma we conclude
+    \begin{align*}
+      \tau\rr{\e}\leq \frac{\vv{V}}{1-r}\rr{\log\rr{V}-\log\rr{\e}}.
+    \end{align*}
   \end{proof}
 \end{claim*}
 
