RA cw2 small fixes

--- a/2023/RA/notes/notes.tex
+++ b/2023/RA/notes/notes.tex
@@ -342,6 +342,16 @@
   \end{align*}
 \end{definition}
 
+\subsection{Coupling Markov chains}
+
+\begin{definition}
+  The variation distance between two distributions $P$ and $Q$ on a countable
+  on a state space $\Omega$ is given by
+  \begin{align*}
+    \vabs{D_1-D_2}=\sup_{A\subseteq\Omega} \abs{P\rr{A}-Q\rr{A}}.
+  \end{align*}
+\end{definition}
+
 \section{Algorithms}
 \label{sec:algorithms}
 
