--- a/2023/RA/cw2/coursework.tex
+++ b/2023/RA/cw2/coursework.tex
@@ -6,7 +6,7 @@
 \begin{document}
 \maketitle
 
-Let $G=\rr{V,E}$ be an undirected finite graph with maximum degree $\Delta$, let $\Omega\subseteq\mathcal P\rr{V}$
+Let $G=\rr{V,E}$ be an undirected finite graph with $n=\vv{V}$ vertices and maximum degree $\Delta$, let $\Omega\subseteq\mathcal P\rr{V}$
 be the set of independent sets on $G$, and let $\e:\P\rr{V}\to \cc{0,1}^V$ be the bijection
 between subsets of $V$ and corresponding binary encodings, i.e. $\e\rr{x}\rr{v}=1$ iff $v\in x$.
 We abuse notation and write $x\rr{v}=\e\rr{x}\rr{v}$.
@@ -22,7 +22,7 @@ Now fix $\lambda\in\rr{0,\infty}$ and let $\pi:\mathcal P\rr{V}\to\bb{0,1}$ be t
 where $Z\rr{\lambda}=\sum_{x\in\cc{0,1}^V} \lambda^{\abs{x}}$.
 
 Let $\rr{X_t}_{t\geq 0}$ be the discrete time stochastic process associated with the Glauber dynamics
-for $\pi$ and, for each $t\in T$, let $V_t$ be the random variable denoting the choice of
+for $\pi$ and, for each $t\geq 0$, let $V_t$ be the random variable denoting the choice of
 vertex $v\in V$ in the transition from $X_t$ to $X_{t+1}$. That is, for all $t\geq 0$, all $x,y\in\Omega$,
 and each choice $v\in V$, we have the transition probability
 \begin{align*}
@@ -48,7 +48,7 @@ and each choice $v\in V$, we have the transition probability
   \begin{proof}
     For all $t$, let $V'_t$ be the random variable denoting the choice of vertex $v\in V$ in the
     transition from $Y_t$ to $Y_{t+1}$.
-    Let $t\in T$, $x,y\in\Omega$ and $x\ominus y=\rr{x\setminus y}\cup\rr{y\setminus x}$
+    Let $t\geq 0$, $x,y\in\Omega$ and $x\ominus y=\rr{x\setminus y}\cup\rr{y\setminus x}$
     denote the symmetric difference.
 
     Consider the case $\abs{x\ominus y}>1$. We clearly have
@@ -77,7 +77,7 @@ and each choice $v\in V$, we have the transition probability
     Thus
     \begin{align*}
       \prc{X_{t+1}=y}{X_t=x} &= \sum_{v\in V} \pr{V_t=v}\prc{X_{t+1}=y}{X_t=x, V_t= v} \\
-                             &= \frac{1}{\vv{V}} \frac{\lambda}{1+\lambda} \\
+                             &= \frac{1}{n} \frac{\lambda}{1+\lambda} \\
                              &= \sum_{v\in V} \pr{V'_t=v}\prc{Y_{t+1}=y}{Y_t=x, V'_t= v} \\
                              &=\prc{Y_{t+1}=y}{Y_t=x}
     \end{align*}
@@ -96,7 +96,7 @@ and each choice $v\in V$, we have the transition probability
     Thus
     \begin{align*}
       \prc{X_{t+1}=y}{X_t=x} &= \sum_{v\in V} \pr{V_t=v}\prc{X_{t+1}=y}{X_t=x, V_t= v} \\
-                             &= \frac{1}{\vv{V}} \frac{1}{1+\lambda} \\
+                             &= \frac{1}{n} \frac{1}{1+\lambda} \\
                              &= \sum_{v\in V} \pr{V'_t=v}\prc{Y_{t+1}=y}{Y_t=x, V'_t= v} \\
                              &=\prc{Y_{t+1}=y}{Y_t=x}
     \end{align*}
@@ -127,13 +127,13 @@ and each choice $v\in V$, we have the transition probability
     nor a neighbour. Then
     \begin{align*}
       \prc{X_{t+1}=y}{X_t=x, V_t\not\in N\rr{X_t}\cup \cc{X_t}}
-      &= \frac{1}{\vv{V}-\vv{N\rr{v}}-1}\sum_{v\in V\setminus N\rr{x}\setminus\cc{x}} \prc{X_{t+1}=y}{X_t=x, V_t=v} \\
-      &= \frac{1}{\vv{V}-\vv{N\rr{v}}-1}\sum_{v\in V\setminus N\rr{x}\setminus\cc{x}} \frac{\pi\cc{x}}{\pi\rr{\Omega\rr{x,v}}}.
+      &= \frac{1}{n-\vv{N\rr{v}}-1}\sum_{v\in V\setminus N\rr{x}\setminus\cc{x}} \prc{X_{t+1}=y}{X_t=x, V_t=v} \\
+      &= \frac{1}{n-\vv{N\rr{v}}-1}\sum_{v\in V\setminus N\rr{x}\setminus\cc{x}} \frac{\pi\cc{x}}{\pi\rr{\Omega\rr{x,v}}}.
     \end{align*}
-    We again note that $x\cup\cc{v}$ is an independent set so $\Omega\rr{x,v}=\cc{x,x\cup\cc{v}}$. So
+    We again note that $x\cup\cc{v}$ is an independent set so $\Omega\rr{x,v}=\cc{x,x\cup\cc{v}}$. Thus
     \begin{align*}
       \prc{X_{t+1}=y}{X_t=x, V_t\not\in N\rr{X_t}\cup \cc{X_t}}
-      &= \frac{1}{\vv{V}-\vv{N\rr{v}}-1}\sum_{v\in V\setminus N\rr{x}\setminus\cc{x}} \frac{\lambda^{\vv{x}}}{\lambda^{\vv{x}}+\lambda^{\vv{x}+1}} \\
+      &= \frac{1}{n-\vv{N\rr{v}}-1}\sum_{v\in V\setminus N\rr{x}\setminus\cc{x}} \frac{\lambda^{\vv{x}}}{\lambda^{\vv{x}}+\lambda^{\vv{x}+1}} \\
       &= \frac{\lambda}{1+\lambda} \\
       &= \prc{Y_{t+1}=y}{Y_t=x, V'_t\not\in N\rr{Y_t}\cup \cc{Y_t}}
     \end{align*}
@@ -152,21 +152,17 @@ and each choice $v\in V$, we have the transition probability
     \pi\cc{x}\prc{X_{t+1}=y}{X_t=x}=\pi\cc{y}\prc{X_{t+1}=x}{X_t=y}.
   \end{align*}
   \begin{proof}
-    For all $t\geq 0$ and $x,y\in\Omega$, write
-    \begin{align*}
-      P\rr{x,y}=\prc{X_{t+1}=y}{X_t=x}.
-    \end{align*}
     Let $x,y\in\Omega$. If $x=y$ then the claim is immediate. If $\abs{x\ominus y}>1$ then
     \begin{align*}
-      P\rr{x,y}=P\rr{y,x}=0.
+      \prc{X_{t+1}=y}{X_t=x}=\prc{X_{t+1}=y}{X_t=x}=0.
     \end{align*}
     Finally, consider the remaining case $\abs{x\ominus y}=1$. Without loss of generality, assume $x=y\cup\cc{v}$. Then
     \begin{align*}
-      \pi\cc{x}P\rr{x,y}
+      \pi\cc{x} \prc{X_{t+1}=y}{X_t=x}
       &={\frac{\lambda^{\abs{x}}}{Z\rr{\lambda}}}{\frac{1}{\abs{V}\rr{1+\lambda}}} \\
       &={\frac{\lambda^{\abs{x}-1}}{Z\rr{\lambda}}}{\frac{\lambda}{\abs{V}\rr{1+\lambda}}} \\
       &={\frac{\lambda^{\abs{y}}}{Z\rr{\lambda}}}{\frac{\lambda}{\abs{V}\rr{1+\lambda}}} \\
-      &=\pi\cc{y}P\rr{y,x}.
+      &=\pi\cc{y}\prc{X_{t+1}=y}{X_t=x}=0.
     \end{align*}
   \end{proof}
 \end{claim*}
@@ -276,7 +272,7 @@ We immediately note $\rho\rr{x,y}=\abs{x\ominus y}$.
 \begin{claim*}[4]
   Let $0<r<1$ and assume $\Delta \leq r\rr{1+\lambda}/\lambda$. Then
   \begin{align*}
-    \exc{\rho\rr{X_{t+1},Y_{t+1}}}{\rho\rr{X_t,Y_t}=1} < 1 - \frac{1-r}{\vv{V}}
+    \exc{\rho\rr{X_{t+1},Y_{t+1}}}{\rho\rr{X_t,Y_t}=1} < \exp\rr{\rr{r-1}n}
   \end{align*}
   \begin{proof}
     By definition,
@@ -286,40 +282,44 @@ We immediately note $\rho\rr{x,y}=\abs{x\ominus y}$.
     By previous considerations we have, for all $v\in V$,
     \begin{align*}
       \exc{\rho\rr{X_{t+1},Y_{t+1}}}{X_t\ominus Y_t=\cc{v}}
-      &< \frac{\vv{V}-\vv{N\rr{v}}-1}{\vv{V}}
-      + \frac{\vv{N\rr{v}}}{\vv{V}}\frac{1}{1+\lambda}
-      + 2\times\frac{\vv{N\rr{v}}}{\vv{V}} \frac{\lambda}{1+\lambda}.
+      &< \frac{n-\vv{N\rr{v}}-1}{n}
+      + \frac{\vv{N\rr{v}}}{n}\frac{1}{1+\lambda}
+      + 2\times\frac{\vv{N\rr{v}}}{n} \frac{\lambda}{1+\lambda}.
     \end{align*}
     Here the first summand is the case $W_t\not\in N\rr{v}\cup \cc{v}$ and the second and third summand are
     due to the case $W_t\in N\rr{v}$. We simplify:
     \begin{align*}
       \exc{\rho\rr{X_{t+1},Y_{t+1}}}{X_t\ominus Y_t=\cc{v}}
-      &< 1 - \frac{\rr{1+\lambda}\vv{N\rr{v}}+\lambda + 1 - \vv{N\rr{v}}-2\lambda \vv{N\rr{v}}}{\vv{V}\rr{1+\lambda}}\\
-      &= 1 - \frac{1+\lambda -\lambda \vv{N\rr{v}}}{\vv{V}\rr{1+\lambda}}.
+      &< 1 - \frac{\rr{1+\lambda}\vv{N\rr{v}}+\lambda + 1 - \vv{N\rr{v}}-2\lambda \vv{N\rr{v}}}{n\rr{1+\lambda}}\\
+      &= 1 - \frac{1+\lambda -\lambda \vv{N\rr{v}}}{n\rr{1+\lambda}}.
     \end{align*}
     Now, by definition of $\Delta$,
     \begin{align*}
-      \exc{\rho\rr{X_{t+1},Y_{t+1}}}{\rho\rr{X_t,Y_t}=1} < 1 - \frac{1+\lambda - \lambda\Delta}{\vv{V}\rr{1+\lambda}}.
+      \exc{\rho\rr{X_{t+1},Y_{t+1}}}{\rho\rr{X_t,Y_t}=1} < 1 - \frac{1+\lambda - \lambda\Delta}{n\rr{1+\lambda}}.
     \end{align*}
     Assume $\Delta\leq r\rr{1+\lambda}/\lambda$. Then
     \begin{align*}
-      \exc{\rho\rr{X_{t+1},Y_{t+1}}}{\rho\rr{X_t,Y_t}=1} < 1 - \frac{1-r}{\vv{V}},
+      \exc{\rho\rr{X_{t+1},Y_{t+1}}}{\rho\rr{X_t,Y_t}=1} < 1 - \frac{1-r}{n}.
     \end{align*}
-    as required.
+    In general,
+    \begin{align*}
+      1 - \frac{1-r}{n} < \exp\rr{\rr{r-1}n}
+    \end{align*}
+    so the claim follows.
   \end{proof}
 \end{claim*}
 
 \begin{claim*}[5]
   Let $0<r<1$ and assume $\Delta\leq r\rr{1+\lambda}/\lambda$. Then, for all $\e>0$,
   \begin{align*}
-    \tau\rr{\e}\leq \frac{\vv{V}}{1-r}{\log\frac{\vv{V}}{\e}}.
+    \tau\rr{\e}\leq \frac{n}{1-r}{\log\frac{n}{\e}}.
   \end{align*}
   \begin{proof}
-    We argue that, for all $d\leq\vv{V}$,
+    We argue that, for all $x,y\in\Omega$,
     \begin{align*}
-      \exc{\rho\rr{X_{t+1},Y_{t+1}}}{\rho\rr{X_t,Y_t}=d}\leq \beta d.
+      \exc{\rho\rr{X_{t+1},Y_{t+1}}}{X_t=x,Y_t=y}\leq \rho\rr{x,y}\exp\rr{\rr{r-1}n}.
     \end{align*}
-    By previous considerations, this holds in the cases $d=0$ and $d=1$.
+    By previous considerations, this holds in the cases $\rho\rr{x,y}=0$ and $\rho\rr{x,y}=1$.
 
     Let $x,y\in\Omega$ such that $d=\rho\rr{x,y}>1$. Create a sequence of states
     $x=z^0,\ldots,z^d=y\in\Omega$ such that, for all $0\leq i<d$, $\rho\rr{z^i,z^{i+1}}=1$.
@@ -341,31 +341,38 @@ We immediately note $\rho\rr{x,y}=\abs{x\ominus y}$.
     We observe that, for each $0\leq i<j\leq d$, $\rr{Z_i,Z_j}$ locally behaves like the coupling we studied
     previously. Thus, in particular, for all $0\leq i<d$,
     \begin{align*}
-      \exc{\rho\rr{Z_{t+1}^i,Z_{t+1}^{i+1}}}{\rho\rr{Z_t^i,Z_t^{i+1}}=1}<\exp\rr{\rr{r-1}\vv{V}}.
+      \exc{\rho\rr{Z_{t+1}^i,Z_{t+1}^{i+1}}}{\rho\rr{Z_t^i,Z_t^{i+1}}=1}<\exp\rr{\rr{r-1}n}.
     \end{align*}
     By the triangle inequality we then obtain
     \begin{align*}
-      \exc{\rho\rr{X_{t+1},Y_{t+1}}}{\rho\rr{X_t,Y_t}=d} \leq \sum_{i=0}^{d-1}\exc{\rho\rr{Z_{t+1}^i,Z_{t+1}^{i+1}}}{\rho\rr{Z_t^i,Z_t^{i+1}}=1} < d\exp\rr{\rr{r-1}\vv{V}}
+      \exc{\rho\rr{X_{t+1},Y_{t+1}}}{\rho\rr{X_t,Y_t}=d} \leq \sum_{i=0}^{d-1}\exc{\rho\rr{Z_{t+1}^i,Z_{t+1}^{i+1}}}{\rho\rr{Z_t^i,Z_t^{i+1}}=1} < d\exp\rr{\rr{r-1}n}
     \end{align*}
     Thus, after $T\geq 0$ steps, we have
     \begin{align*}
-      \exc{\rho\rr{X_T,Y_T}}{\rho\rr{X_0,Y_0}=d} < d\rr{1-\frac{1-r}{\vv{V}}}^T \leq \vv{V}\exp\rr{\rr{r-1}\vv{V}T}.
+      \exc{\rho\rr{X_T,Y_T}}{\rho\rr{X_0,Y_0}=d} < d\exp\rr{\rr{r-1}nT} \leq n\exp\rr{\rr{r-1}nT}.
     \end{align*}
     Let $\e>0$ and assume
     \begin{align*}
-      T \geq \frac{\vv{V}}{1-r}\rr{\log\rr{V}-\log\rr{\e}}.
+      T \geq \frac{n}{1-r}\rr{\log n-\log\e}.
     \end{align*}
     Equivalently,
     \begin{align*}
-      \vv{V}\exp\rr{\rr{r-1}\vv{V}T} \leq \e
+      n\exp\rr{\rr{r-1}nT} \leq \e
     \end{align*}
     so
     \begin{align*}
-      \exc{\rho\rr{X_T,Y_T}}{\rho\rr{X_0,Y_0}=d} \leq \e.
+      \exc{\rho\rr{X_T,Y_T}}{X_0=x,Y_0=y} \leq \e.
+    \end{align*}
+    In particular, for all $x_0,y_0\in\Omega$,
+    \begin{align*}
+      \prc{X_T\neq Y_T}{X_0=x_0,Y_0=y_0}
+      &\leq \max_{x,y\in\Omega} \prc{\rho\rr{X_T,Y_T}\geq 1}{X_0=x,Y_0=y} \\
+      &\leq \max_{x,y\in\Omega} \exc{\rho\rr{X_T,Y_T}}{X_0=x,Y_0=y} \\
+      &\leq \e.
     \end{align*}
     By the coupling lemma we conclude
     \begin{align*}
-      \tau\rr{\e}\leq \frac{\vv{V}}{1-r}\rr{\log\rr{V}-\log\rr{\e}}.
+      \tau\rr{\e}\leq \frac{n}{1-r}\rr{\log\rr{V}-\log\rr{\e}}.
     \end{align*}
   \end{proof}
 \end{claim*}
